@@ -75,6 +75,7 @@ allprojects {
   }
 
   sourceCompatibility = 11
+  targetCompatibility = 11
   compileJava {
     options.compilerArgs << '-parameters' << '-Xlint:deprecation'
   }
@@ -190,7 +191,7 @@ dependencies {
   compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
-  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.12.1'
+  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.13.4'
   compile group: 'org.postgresql', name: 'postgresql', version: '42.2.14'
 
   compile group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.2-RELEASE'
@@ -262,6 +263,7 @@ dependencies {
   testCompile group: 'net.jodah', name: 'failsafe', version: '2.4.0'
   testCompile group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.2'
   testCompile group: 'org.xmlunit', name: 'xmlunit-matchers', version: '2.8.2'
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 }
 
 sourceSets {
@@ -295,6 +297,12 @@ dependencies {
 
 test {
   useJUnitPlatform()
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task apiTest(type: Test) {
